# egregore

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  diagnose.sh  docker-compose.yml  init.sh  install.sh  pyproject.toml  uninstall.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  format.yml
docs/: CLIENT_SETUP.md  DASHBOARD.md
docs/plans/: 2026-02-08-egregore-hive-memory.md  2026-02-09-egregore-dashboard.md
skill-egregore/: README.md  SKILL.md  pyproject.toml  skill.yaml
skill-egregore/prompts/: system.md
skill-egregore/src/: __init__.py  client.py  main.py  ui.py
src/: cli.py  config.py  dashboard.py  graph_client.py  memory.py  server.py
tests/: test_graph_client.py
